# CodeCompass

./: .gitignore  .travis.yml  CMakeLists.txt  CodeCompass-fork.sln  Config.cmake  Doxyfile  Exports.cmake  FindGraphviz.cmake  FindLibMagic.cmake  FindODB.cmake  FindOdb.cmake  FindOpenLdap.cmake  FindThrift.cmake  Functions.cmake  LICENSE.txt  Makefile.am  Makefile.am.coverage  README.md  SECURITY.md  Testing.cmake  aclocal.m4  configure.ac  test-wrapper
dox/: Doxyfile  Makefile.am  userguide.md
logger/: CMakeLists.txt
logger/src/: ldlogger-hooks.c  ldlogger-hooks.h  ldlogger-logger.c  ldlogger-tool-gcc.c  ldlogger-tool-javac.c  ldlogger-tool.c  ldlogger-tool.h  ldlogger-util.c  ldlogger-util.h
model/: CMakeLists.txt  Makefile.am
model/include/model/: asttype.h  buildaction.h  builddirectory.h  buildlog.h  buildlogmessage.h  buildparameter.h  buildsource.h  buildsourcetarget.h  buildtarget.h  common.h  (+12 more)
model/src/: asttype.cpp
model/test/: featuretest.cpp
packaging/: CMakeLists.txt
packaging/appimage/: AppRun  codecompass.desktop
packaging/deb/: control  postinst
parser/: CMakeLists.txt  Makefile.am
parser/cxxparser/: Makefile.am
parser/fileparser/: Makefile.am
parser/generalparser/: Makefile.am
parser/gitparser/: Makefile.am
parser/javaparser/: Makefile.am
parser/javaparser-api/: Makefile.am  javaparser.thrift
parser/javaparser-java/: Makefile.am
parser/logger/: Makefile.am  logtoxml.cpp  setldlogenv.csh  setldlogenv.sh
parser/metricsparser/: Makefile.am
parser/parser/: Makefile.am
parser/projectparser/: Makefile.am
parser/pythonparser/: Makefile.am
parser/pythonparser-api/: Makefile.am  pythonparser.thrift
parser/pythonparser-java/: Makefile.am
parser/reparser/: Makefile.am
parser/scripts/: Makefile.am  createSqliteIndices.sh
parser/searchparser/: Makefile.am
parser/src/: parser.cpp  parsercontext.cpp  plugin_handler.cpp  pluginhandler.cpp  sourcemanager.cpp
plugins/: CMakeLists.txt
plugins/codechecker/: CMakeLists.txt
plugins/competence/: CMakeLists.txt
plugins/compilationdatabase/: CMakeLists.txt
plugins/cpp/: CMakeLists.txt
plugins/cpp_lsp/: CMakeLists.txt
plugins/cpp_metrics/: CMakeLists.txt
plugins/cpp_reparse/: CMakeLists.txt
plugins/csharp/: .gitignore  CMakeLists.txt  csharp.sln
plugins/cxx/: CMakeLists.txt
plugins/dummy/: CMakeLists.txt
plugins/git/: CMakeLists.txt  FindGit2.cmake  FindLibGit2.cmake
plugins/helm/: CMakeLists.txt
plugins/java/: CMakeLists.txt
plugins/python/: CMakeLists.txt
plugins/search/: CMakeLists.txt
plugins/yaml/: CMakeLists.txt  yaml-cpp-config.cmake
scripts/: CMakeLists.txt  CodeCompass  CodeCompass_logger  Makefile.am  build_cc.sh  build_deps.sh  cc_monitor.py  fake_compiler.sh  install_latest_build2.sh  install_odb_2.5.sh  keepalive  remover.sh  runtime.sh  setldlogenv.sh
scripts/autoparser/: autoparser.py
scripts/cli/: CodeCompass.py  Makefile.am  test.py
scripts/docker/: Dockerfile  codecompass-build.sh
scripts/jenkins/: build.sh  makepkg.sh
scripts/patch/: comment_lexer_fix.patch  comment_parser_fix.patch  odb_pgsql_cte.patch  odb_sqlite_cte.patch
service/: CMakeLists.txt  Makefile.am
service/authentication/: CMakeLists.txt  authentication.thrift
service/codechecker/: Makefile.am
service/codechecker-api/: Makefile.am  codeCheckerDBAccess.thrift
service/core/: Makefile.am
service/core-api/: Makefile.am  common.thrift  project.thrift  result.thrift
service/cppservice/: Makefile.am
service/cppservicehelper/: Makefile.am
service/javaservice/: Makefile.am
service/javaservicehelper/: Makefile.am
service/langservicelib/: Makefile.am
service/language/: CMakeLists.txt  language.thrift
service/language-api/: Makefile.am  language.thrift
service/lsp/: CMakeLists.txt
service/metrics-api/: Makefile.am  metrics.thrift
service/metricsservice/: Makefile.am
service/plugin/: CMakeLists.txt  Makefile.am  plugin.thrift
service/plugin-api/: Makefile.am
service/project/: CMakeLists.txt  common.thrift  project.thrift
service/pythonservice/: Makefile.am
service/search/: Makefile.am
service/search-api/: Makefile.am  search.thrift
service/uscs/: Makefile.am
service/uscs-api/: Makefile.am  uscs.thrift
service/version/: Makefile.am
service/version-api/: Makefile.am  version.thrift
service/workspace/: CMakeLists.txt  Makefile.am  workspace.thrift
service/workspace-api/: Makefile.am
util/: CMakeLists.txt  Makefile.am
util/doc/: Doxyfile
util/src/: dbutil.cpp  dynamiclibrary.cpp  environment.cpp  filelogstrategy.cpp  filesystem.cpp  graph.cpp  graphpimpl.h  json.cpp  legendbuilder.cpp  logutil.cpp  parserutil.cpp  pipedprocess.cpp  standarderrorlogstrategy.cpp  streamlog.cpp  thriftprocess.cpp  util.cpp  webserverutil.cpp
webgui/: CMakeLists.txt  InstallGUI.cmake  codecompass.profile.js.in  credits.html  index.html  login.html  package.json  startpage.html
webgui-new/: .env  .eslintrc.json  .gitignore  CMakeLists.txt  GenerateThrift.cmake  InstallReact.cmake  README.md  eslint.config.js  next.config.js  package-lock.json  package.json  thrift-codegen.sh  tsconfig.json
webgui-new/scripts/: patch-basepath.js
webgui-new/src/: server.ts
webgui/fonts/: codecompass.eot
webgui/scripts/: ga.js
webgui/style/: codecompass.css  icons.css  login.css  startpage.css
webgui/userguide/: CMakeLists.txt  Doxyfile  InstallUserguide.cmake  userguide.md
webgui2/: Makefile.am
webgui2/html/: credits.html  index.html  login.html  settings.html  startpage.html  startpage_brubeck.html
webserver/: CMakeLists.txt  Makefile.am
webserver/authenticators/: CMakeLists.txt
webserver/mongoose/: CMakeLists.txt  Makefile.am
webserver/pluginable-webserver/: CMakeLists.txt  Makefile.am
webserver/pluginframework/: CMakeLists.txt  Makefile.am
webserver/src/: authentication.cpp  authentication.h  config.h.in  lsphandler.cpp  mainrequesthandler.cpp  mainrequesthandler.h  mongoose.c  mongooseserver.cpp  mongooseserver.h  session.cpp  sessionmanager.cpp  sessionmanager.h  threadedmongoose.cpp  threadedmongoose.h  webserver.cpp
(+1808 files in other folders)
