install(DIRECTORY
  cli
  DESTINATION "share/codecompass"
  USE_SOURCE_PERMISSIONS
  FILES_MATCHING PATTERN "[^.]*")

install(FILES
  CodeCompass
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE
  DESTINATION ${INSTALL_BIN_DIR})

install(FILES
  setldlogenv.sh
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE
  DESTINATION "share/codecompass")